# oncapintada

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO.txt  pyproject.toml
data/experimental/enthalpy/: AuPd.csv  AuPt.csv
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.md
docs/source/_static/: custom.css
examples/: testing_subregular_model.ipynb
examples/experimental_data/phase_diagram/: binodal_AuPt.csv
examples/notebooks/example01/: testing_thermodynamics.ipynb
examples/notebooks/example02/: example02.ipynb  gibbs_free_energy_of_mixing.csv
examples/notebooks/example03/: example03.ipynb
src/oncapintada/: MCMC.py  __init__.py  _version.py  bondcounter.py  bonds_counter.py  bonds_model.py  cluster_expansion.py  constants.py  cvm.py  disordered_alloy.py  generator.py  gibbs.py  input.xyz  mixing.py  monte_carlo.py  pair_distribution_function.py  pairs.py  phase_diagram.py  polymorphism.py  qca.py  random_mixer.py  sqs.py  sro_TMD.py  sro_binary.py  sro_multicomponent.py  subregular_model.py  thermodynamics.py  vibrational.py  view.py  yaml_parser.py
src/oncapintada/backup/: bonds_model.py  bonds_model_v3.py
test/: conftest.py  test_bondcounter.py  test_subregular_model.py
test/notebooks/: testing_thermodynamics.ipynb
