[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncapintada"
version = "26.4.5"                                         # format: # YY.MM.incremental (YY = year, MM = month)
authors = [
  { name="Leandro Seixas", email="leandro.rocha@ilum.cnpem.br" },
]
description = "Onça-pintada is a toolkit to simulate and analyze alloys from first-principles methods."
readme = "README.md"
license = {file = "LICENSE"}                               # MIT License
requires-python = ">=3.13"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'scipy',
    'matplotlib',
    'pytest',
    'pyyaml'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixasgroup/oncapintada"
