[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncapintada"
version = "26.4.17"                                         # format: # YY.MM.incremental (YY = year, MM = month)
authors = [
  { name="Leandro Seixas Rocha", email="leandro.rocha@ilum.cnpem.br" },
]
description = "For the investigation of alloys."
readme = "README.md"
license = {file = "LICENSE"}                               # MIT License
requires-python = ">=3.11"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'scipy',
    'matplotlib',
    'pytest',
    'pyyaml'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixas-research/oncapintada"
